2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* src/lastlog.c: Use EXIT_FAILURE / EXIT_SUCCESS for exit()
	* src/lastlog.c: Added splint annotations.
	* src/lastlog.c: Avoid global pwent.
	* src/lastlog.c: Cast ID to ulongs and use ulong formats for IDs.
	* src/lastlog.c: Avoid assignment in comparisons.
	* src/lastlog.c: Ignore fclose() return value since the file is
	only opened for reading.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newgrp.c: Added assertion to guide splint (and me).

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/find_new_gid.c: Use booleans instead of char fo
	used_gids.
	* libmisc/find_new_gid.c: Use getdef_ulong and cast to git_t to
	get GID values.
	* libmisc/find_new_gid.c: Use UL as a prefix for ulong values.
	* libmisc/find_new_uid.c: Likewise.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/yesno.c: Ignore the return value of puts.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/age.c: Use exit(EXIT_FAILURE) instead of exit(1).
	* libmisc/age.c: The return value of execl() is not used.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/xgetXXbyYY.c, libmisc/myname.c, libmisc/getgr_nam_gid.c,
	libmisc/salt.c, libmisc/list.c, libmisc/cleanup.c, src/login.c,
	lib/getdef.h, lib/groupio.c, lib/getlong.c, lib/gshadow_.h,
	lib/sgroupio.c, lib/shadowio.c, lib/pwio.c, lib/commonio.h,
	lib/fputsx.c, lib/prototypes.h: Added splint annotations.
	* lib/groupio.c: Avoid implicit conversion of pointers to
	booleans.
	* lib/groupio.c: Free allocated buffers in case of failure.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/defines.h: Added splint definitions to replace <locale.h>

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/utmp.c, libmisc/age.c, libmisc/shell.c, lib/groupio.c,